# poptrie

./: BENCHMARK.md  COMPARE.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: lpm_benches.rs
src/: address.rs  bitmap.rs  bits.rs  iter.rs  key.rs  lib.rs  prefix.rs  value_index.rs
tests/: api.rs  bulk_proptests.rs  lpm_proptests.rs  proptests.rs  tests.rs  utils.rs
tests/api/: contains.rs  default.rs  insert.rs  lookup.rs  mod.rs  remove.rs
tests/common/: mod.rs  reference_model.rs
tests/proptests/: insert.rs  lookup.rs  mod.rs
tests/support/: mod.rs
